--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "znframework/default-project",
+    "version": "6.0.2",
     "type": "project",
     "description": "ZN Framework Default Project For Multi Edition",
     "keywords": ["zn","zeroneed","default project"],
